--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="img/ico.png" />
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
     <title>Valorantjp</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <!-- header -->
